# ai-playground

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
alo-rag/: .env.example  README.md  failure_analysis.txt  major_fixes.md  pyproject.toml  server.py  solution_overview.html  solution_overview.md
alo-rag/assets/: design.md  requirements.md
alo-rag/assets/ai_generated_unseen_test_queries/: new_test_queries_TQ026_to_TQ050.html
alo-rag/assets/evolution_prompts/: 1_alo_rag_fix_instructions.md  2_reranker_upgrade_instructions.md  3_latency_optimisation_instructions.md  4_alo_rag_system_hardening_tasks.md
alo-rag/data/: registry.db
alo-rag/data/customers/: customer_order_history.json
alo-rag/data/policies/: promotions_policy.md  shipping_policy.md
alo-rag/data/products/: alo_product_catalog.json
alo-rag/demo/: .env.local  README.md  components.json  package-lock.json  package.json
alo-rag/demo/app/: globals.css  layout.tsx  page.tsx
alo-rag/demo/app/api/chat/: route.ts
alo-rag/demo/components/assistant-ui/: markdown-text.tsx  thread.tsx
alo-rag/docs/: ADR.md  CHANGELOG.md  failure_analysis.md  production_readiness_memo.md
alo-rag/evals/: test_queries.json
alo-rag/scripts/: expand_customers.py
alo-rag/src/: __init__.py  models.py  pipeline.py
alo-rag/src/eval/: __init__.py  __main__.py  failure_analysis.py  harness.py  metrics.py  regression.py
alo-rag/src/generation/: customer_context.py  guardrails.py  llm_client.py  prompt_builder.py
alo-rag/src/ingestion/: __init__.py  chunkers.py  embedders.py  index_builder.py  loaders.py  registry.py  run_ingestion.py
alo-rag/src/query/: decomposer.py  hyde.py  intent_router.py  scope_guard.py
alo-rag/src/retrieval/: __init__.py  fusion.py  hybrid_search.py  reranker.py
alo-rag/tests/: test_decomposer.py  test_eval.py  test_generation.py  test_hyde.py  test_intent_router.py  test_llm_client.py  test_models.py  test_pipeline.py  test_query_intelligence.py  test_retrieval.py  test_scope_guard.py
alo_data_package/: README.md
aws-bedrock-chat-agent-mcp/: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .sops.yaml  DOCUMENTATION.md  PROJECT_SUMMARY.md  README.md
azure-mcp-es-gdb-chat/: DOCUMENTATION.md  README.md  README_local.md  __init__.py  degree_resolver.py  mcp_app.py  procfile  prompt_injection_detector.py  prop_resolver.py  requirements.txt  server.py  server_search.py  standalone_graphdb_conn_check.py  test_prompt_injection_detector.py  utils.py  utils.py.bak
docs/: langgraph.md
mcp-natural-language-to-data-endpoints/: GET_STARTED.md  IMPLEMENTATION.md  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  WORKFLOW.md  requirements.txt  server.py  test_setup.py
mcp-using-langchain/: client.py  mathserver.py  weather.py
nl-to-graphql-enterprise-solution/: GET_STARTED.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  WORKFLOW.md  config.py  main.py  sample_queries.txt  test_setup.py  watches_enterprise.db
rag-graphrag-exploration/: rag-graphrag-on-relational-tables.ipynb
(+435 files in other folders)
