[project]
name = "ai-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "bert-score>=0.3.13",
    "chromadb>=0.4.0",
    "datasets>=2.14.0",
    "faker>=38.2.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "jupyter-client>=8.0.0",
    "jupyterlab>=4.0.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.3.22",
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-openai>=0.0.5",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.8",
    "langgraph-cli[inmem]>=0.4.2",
    "langsmith>=0.4.31",
    "loguru>=0.7.0",
    "matplotlib>=3.7.0",
    "mcp>=1.15.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pinecone-client>=2.2.0",
    "plotly>=5.15.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "strawberry-graphql>=0.287.0",
    "tavily-python>=0.3.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]
